# zupi

./: .editorconfig  .envrc  .gitignore  HyperMake  README.md
bots/emo/: emo.hmake
bots/emo/cmd/bot/: board.go  cli.go  main.go
bots/emo/pack/: Dockerfile
bots/emo/pack/assets/minit/: startup
bots/emo/robot/: base.go  board.go  button.go  camera.go  camsupp.go  led.go  motion.go  servo.go
bots/zpi1/: pack.sh  zpi1.hmake
bots/zpi1/brain/: .gitignore  botctrl.go  brain.go  camsupp_logic.go  controller.go  led_logic.go  logics.go  vision_logic.go
bots/zpi1/brain/connector/: botrunner.go  connector.go  discover.go  server.go
bots/zpi1/brain/connector/www/: default.css  default.js  index.html  package.json
bots/zpi1/brain/connector/www/templates/: brains.html
bots/zpi1/brain/zpi1-brain/: brain.go  cli.go  connect.go  main.go
bots/zpi1/proto/zupi/: camera.proto
bots/zpi1/robot/: app.js  package.json  sim.js
bots/zpi1/robot/lib/: body.js  brain-connector.js  camera.js  devices.js  five.js  logic.js  robot.js  sim.js
bots/zpi1/vision/: CMakeLists.txt  build.sh  perf.txt
bots/zpi1/vision/cmake/Hunter/: config.cmake
bots/zpi1/vision/inc/: vision.h
bots/zpi1/vision/src/: analyzer.cpp  analyzer.h  app.cpp  app.h  detection.cpp  detection.h  face_detector.cpp  face_detector.h  model.cpp  perf.cpp  vision.cpp
common/cmake/: ZuPiCommon.cmake  armhf.toolchain.cmake
common/cpp/: CMakeLists.txt  common.hmake
common/cpp/inc/: app.h  common.h
common/cpp/inc/zupi/: app.h  common.h
common/cpp/src/: app.cpp
hack/: build-cmake.sh  build-go.sh  build-nodejs.sh  deploy.sh  functions.sh  pack-docker.sh  unpack-url.sh
hack/toolchain/: Dockerfile
sim/smartcam1d/: CMakeLists.txt  smartcam1d.hmake
sim/smartcam1d/inc/: camera1d.h  events.h  servo.h  timeline.h
sim/smartcam1d/src/: algo_cust1.cpp  algo_cust1.h  algo_fido.cpp  algo_fido.h  algo_simpq.cpp  algo_simpq.h  algo_triangle.cpp  algo_triangle.h  app.cpp  app.h  camera1d.cpp  capture.cpp  capture.h  servo.cpp  simulate.cpp  simulate.h  timeline.cpp  train.cpp
sim/visualizer/: app.js  objects.js  package.json  styles.css  vis.sh  visualizer.plugin
sim/visualizer/lib/: model.js  object.js
sim/visualizer/test/: test.json  test1.json
sim/visualizer/www/: index.html  index.js  objects.js  styles.css
